--- a/src/jira_report_generator/static/template.html
+++ b/src/jira_report_generator/static/template.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <title>{{ title }}</title>
     <style>{% include "style.css" %}</style>
-    <script>{% include "script.js" %}</script>
+    <script type="module">{% include "script.js" %}</script>
   </head>
   <body>
     <div class="table-content">
